--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,1 +1,9 @@
-@import './styles/index.scss'
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+$font-stack: -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica', sans-serif;
+
+body {
+  margin: 0;
+font: $font-stack;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  }
